--- a/.github/workflows/update-cardinal-cask.yml
+++ b/.github/workflows/update-cardinal-cask.yml
@@ -7,6 +7,9 @@ on:
   # Allow manual runs from the Actions tab
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-cask:
     runs-on: macos-latest
@@ -17,12 +20,19 @@ jobs:
 
       - name: Get latest Cardinal version from GitHub
         id: latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           LATEST_VERSION=$(python - << 'PY'
-          import json, urllib.request
+          import json, os, urllib.request
 
           url = "https://api.github.com/repos/cardisoft/cardinal/releases/latest"
-          with urllib.request.urlopen(url) as resp:
+          headers = {
+              "Authorization": f"Bearer {os.environ['GITHUB_TOKEN']}",
+              "User-Agent": "cardinal-homebrew-bot"
+          }
+          req = urllib.request.Request(url, headers=headers)
+          with urllib.request.urlopen(req) as resp:
               data = json.loads(resp.read().decode())
           tag = data["tag_name"]  # e.g. "v0.1.10"
           print(tag.lstrip("v"))
